Implement memq s3express